webkev: fix nav header text alignment

--- a/webkev/src/components/Navbar/style.module.css
+++ b/webkev/src/components/Navbar/style.module.css
@@ -22,6 +22,7 @@
 .navHeader {
     display: flex;
     gap: 0.5em;
+    align-items: center;
 
     &:hover {
         color: var(--link-hover);
